# wasm-gdal-sandbox

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake_builds.yml  code_checks.yml  conda.yml  doc_build.yml  linux_build.yml  macos.yml
port/: cpl_vsil.cpp  cpl_vsil_curl.cpp  cpl_vsil_curl_class.h  cpl_vsisimple.cpp
test-cog/: CMakeLists.txt  main.cpp
vcpkg-triplets/: toolchain.cmake  wasm32-emscripten-threads.cmake
